Instalación del paquete live-server, configuración de la ip y el puerto, y carpeta de multimedia.

--- a/public/mediaPlayer.html
+++ b/public/mediaPlayer.html
@@ -11,7 +11,7 @@
     <main class="container">
         <h2>My video</h2>
         <video class="movie" id="movie">
-            <source src="C:/Users/gerar/Videos/pkm_remix.mp4">
+            <source src="/media/01.mp4">
         </video>
         <button class="play-pause" id="play-pause">Play/Pause</button>
    </main> 
