Added mute functionality.

--- a/public/mediaPlayer.html
+++ b/public/mediaPlayer.html
@@ -14,6 +14,8 @@
             <source src="/media/01.mp4">
         </video>
         <button class="play-pause" id="play-pause">Play/Pause</button>
+        <button class="mute-unmute" id="mute-unmute">Mute/Unmute</button>
+        
    </main> 
 
    <script type="module" src="index.js"></script>
