--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </header>
 
         <section class="main">
-            <h2 class="main__title">¿Qué quieres ver hoy?</h2>
+            <h2 class="main__title">¿Qué quieres ver hoy, guapo?</h2>
             <input class="main__input" type="text" placeholder="Peliculas...">
         </section>
         
