Estilos de CSS nuevos para PlatziVideo.

--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | PlatziVideo</title>
-    <link rel="stylesheet" href="style_login.css">
+    <link rel="stylesheet" href="style_singup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -18,27 +18,13 @@
 
     <section class="login">
         <section class="login__container">
-            <h2 tabindex="0">Inicia sesión</h2>
+            <h2 tabindex="0">Creación de tú cuenta</h2>
             <form class="login__container--form" action="">
                 <input class="input" type="text" placeholder="Correo" aria-label="Correo">
-                <input class="input" type="password" placeholder="Contraseña" aria-label="Contraseña">
-                <button class="button">Iniciar sesión</button>
-                <div class="login__container--remember-me">
-                    <label class="login__container--label">
-                        <input class="login__container--checkbox" type="checkbox" name="" id="checkbox" value="checkbox" /><p>Recuerdame</p>
-                    </label>
-                    <a href="">Olvidé mi contraseña</a>
-
-                </div>
+                <input class="input" type="password" placeholder="Contraseña (min:8 )" aria-label="Contraseña">
+                <input class="input" type="password" placeholder="Repite tu contraseña" aria-label="Contraseña">
+                <button class="button">Crear cuenta</button>
             </form>
-            <section class="login__container--social-media">
-                <div><img src="https://img.icons8.com/fluent-systems-regular/48/ffffff/google-logo.png" alt="Cuenta de Google"><p>Inicia sesión con Google</p></div>
-                <div><img src="https://img.icons8.com/ios/50/ffffff/twitter--v1.png" alt="Cuenta de Twitter"><p>Inicia sesión con Twitter</p></div>
-            </section>
-            <section class="login__container--registrate">
-                <p>No tienes una cuenta, <a href="">Regístrate!</a></p>
-            </section>
-
         </section>
     </section>
 
@@ -49,3 +35,4 @@
     </footer>
 </body>
 </html>
+
