--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         </header>
 
         <section class="main">
-            <h2 class="main__title">¿Qué quieres ver hoy, guap@?</h2>
-            <input class="main__input" type="text" placeholder="Peliculas...">
+            <h2 class="main__title">¿Qué tema quieres dominar hoy?</h2>
+            <input class="main__input" type="text" placeholder="Tomar una clase de...">
         </section>
 
-        <h2 class="categories__title">Mi lista</h2>
+        <div class="categories">
+          <h2 class="categories__title">Mi lista</h2>
+        </div>
 
         <section class="carousel">
             <div class="carousel__container">
@@ -48,7 +50,7 @@
                         <p class="carouser-item__details--title">Título</p>
                         <p class="carouser-item__details--subtitle">2019 +16 117 min.</p>
                         <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="play" />
-                        <img src="https://img.icons8.com/fluent/48/000000/plus.png" alt="plus" />
+                        <img src="https://img.icons8.com/fluency/50/000000/delete-bookmark.png" alt="delete" />
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -60,7 +62,9 @@
             </div>
         </section>
 
-        <h2 class="categories__title">Tendencias</h2>
+        <div class="categories">
+          <h2 class="categories__title">Tendencias</h2>
+        </div>
 
         <section class="carousel">
             <div class="carousel__container">
@@ -92,6 +96,8 @@
                 <li><a href="/">Bolsa de trabajo</a></li>
             </ul>
         </footer>
+        <script src="./data.js"></script>
+        <script src="./app.js"></script>
     </body>
 </html>
 
