Implementation of the automata for the hyperlinks of the project.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <p>Perfil</p>
                 </div>
                 <ul>
-                    <li><a href="/">Cuenta</a></li>
-                    <li><a href="/">Cerrar sesión</a></li>
+                    <li><a href="./index.html">Cuenta</a></li>
+                    <li><a href="./login.html">Cerrar sesión</a></li>
                 </ul>
             </div>
         </header>
@@ -45,12 +45,14 @@
         <section class="carousel">
             <div class="carousel__container">
                 <div class="carousel-item">
-                    <img class="carousel-item__img" src="https://images.pexels.com/photos/8751008/pexels-photo-8751008.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="casas en colinas">
+                    <img class="carousel-item__img" src="https://firebasestorage.googleapis.com/v0/b/platzivideo-gerard.appspot.com/o/basicoJS.png?alt=media&token=d02164bb-1a89-4d0a-955c-1c22099f7711" alt="Curso basicp de JavaScript">
                     <div class="carousel-item__details">
-                        <p class="carouser-item__details--title">Título</p>
-                        <p class="carouser-item__details--subtitle">2019 +16 117 min.</p>
-                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="play" />
-                        <img src="https://img.icons8.com/fluency/50/000000/delete-bookmark.png" alt="delete" />
+                        <p class="carouser-item__details--title">JavaScript</p>
+                        <p class="carouser-item__details--subtitle">2021 | 5 horas.</p>
+                        <a href="./platzivideo.html">
+                          <img class="img-play" src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="play" />
+                        </a>
+                        <img class="img-plus" src="https://img.icons8.com/fluency/50/000000/delete-bookmark.png" alt="delete" />
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -70,13 +72,15 @@
             <div class="carousel__container">
                 <div class="carousel-item">
                     <img class="carousel-item__img"
-                        src="https://images.pexels.com/photos/8751008/pexels-photo-8751008.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                        alt="casas en colinas">
+                        src="https://firebasestorage.googleapis.com/v0/b/platzivideo-gerard.appspot.com/o/frontend.png?alt=media&token=c07f9496-abb2-4181-866c-1b0efdfc706b"
+                        alt="Curso de frontend">
                     <div class="carousel-item__details">
-                        <p class="carouser-item__details--title">Título</p>
-                        <p class="carouser-item__details--subtitle">2019 +16 117 min.</p>
-                        <img src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="play" />
-                        <img src="https://img.icons8.com/fluent/48/000000/plus.png" alt="plus" />
+                        <p class="carouser-item__details--title">Frontend</p>
+                        <p class="carouser-item__details--subtitle">2021 | 6 Horas.</p>
+                        <a href="./platzivideo.html">
+                          <img class="img-play" src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="play" />
+                        </a>
+                        <img class="img-plus" src="https://img.icons8.com/fluent/48/000000/plus.png" alt="plus" />
                     </div>
                 </div>
                 <div class="carousel-item">
