--- a/platzivideo.html
+++ b/platzivideo.html
@@ -9,15 +9,17 @@
 </head>
 <body>
   <header class="header">
-    <img class="header__img" src="https://firebasestorage.googleapis.com/v0/b/platzivideo-gerard.appspot.com/o/logo.png?alt=media&token=5437b4f3-52a1-406f-9e6b-6c71b180c9e3" alt="logo platzivideo" tabindex="0">
+    <a rel="stylesheet" href="./index.html">
+      <img class="header__img" src="https://firebasestorage.googleapis.com/v0/b/platzivideo-gerard.appspot.com/o/logo.png?alt=media&token=5437b4f3-52a1-406f-9e6b-6c71b180c9e3" alt="logo platzivideo" tabindex="0">
+    </a>
     <div class="header__menu">
         <div class="header__menu--profile">
             <img src="https://firebasestorage.googleapis.com/v0/b/platzivideo-gerard.appspot.com/o/user-icon.png?alt=media&token=cb40a17c-feeb-4b07-b99a-7cdc911493e9" atl="user icon">
             <p>Perfil</p>
         </div>
         <ul>
-            <li><a href="/">Cuenta</a></li>
-            <li><a href="/">Cerrar sesión</a></li>
+            <li><a href="./index.html">Cuenta</a></li>
+            <li><a href="./login.html">Cerrar sesión</a></li>
         </ul>
     </div>
   </header>
