--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <section class="login">
         <section class="login__container">
             <h2 tabindex="0">Inicia sesión</h2>
-            <form class="login__container--form" action="">
+            <form class="login__container--form" action="./index.html">
                 <input class="input" type="text" placeholder="Correo" aria-label="Correo">
                 <input class="input" type="password" placeholder="Contraseña" aria-label="Contraseña">
                 <button class="button">Iniciar sesión</button>
@@ -36,7 +36,7 @@
                 <div><img src="https://img.icons8.com/ios/50/ffffff/twitter--v1.png" alt="Cuenta de Twitter"><p>Inicia sesión con Twitter</p></div>
             </section>
             <section class="login__container--registrate">
-                <p>No tienes una cuenta, <a href="">Regístrate!</a></p>
+                <p>No tienes una cuenta, <a href="./signup.html">Regístrate!</a></p>
             </section>
 
         </section>
