--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
     <section class="login">
         <section class="login__container">
             <h2 tabindex="0">Creación de tú cuenta</h2>
-            <form class="login__container--form" action="">
+            <form class="login__container--form" action="./login.html">
                 <input class="input" type="text" placeholder="Correo" aria-label="Correo">
                 <input class="input" type="password" placeholder="Contraseña (min:8 )" aria-label="Contraseña">
                 <input class="input" type="password" placeholder="Repite tu contraseña" aria-label="Contraseña">
