Added animation of the video player buttons.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+        <!-- Icons css.gg -->
+        <link href='https://css.gg/play-button-o.css' rel='stylesheet'>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -51,6 +53,7 @@
                         <p class="carouser-item__details--subtitle">2021 | 5 horas.</p>
                         <a href="./platzivideo.html">
                           <img class="img-play" src="https://img.icons8.com/flat-round/64/000000/play--v1.png" alt="play" />
+                          <!--<i class="gg-play-button-o"></i>-->
                         </a>
                         <img class="img-plus" src="https://img.icons8.com/fluency/50/000000/delete-bookmark.png" alt="delete" />
                     </div>
