--- a/platzivideo.html
+++ b/platzivideo.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style_video.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
   <title>PlatziVideo</title>
 </head>
 <body>
@@ -31,9 +33,20 @@
       <p>4</p>
     </section>
     <section class="content">
-      <section>
-        <p>Video</p>
-      </section>
+      <div class="c-video">
+        <video class="video" src="https://www.youtube.com/watch?v=yQxwbZsL14Y"></video>
+
+        <div class="controls">
+          <div class="buttons">
+            <button id="play-pause"></button>
+          </div>
+
+          <div class="progress-bar">
+            <div class="purple-juice"></div>
+          </div>
+        </div>
+      </div>
+
       <footer class="footer">
         <p>Información</p>
       </footer>
