most of the buttons for the video player are already working.

--- a/platzivideo.html
+++ b/platzivideo.html
@@ -34,16 +34,16 @@
     </section>
     <section class="content">
       <div class="c-video">
-        <video class="video" src="https://www.youtube.com/watch?v=yQxwbZsL14Y"></video>
+        <video class="video" src="./videos/video1.mp4"></video>
 
         <div class="controls">
           <div class="buttons">
             <button id="play-pause"></button>
           </div>
-
           <div class="progress-bar">
             <div class="purple-juice"></div>
           </div>
+          <p class="time__video"></p>
         </div>
       </div>
 
@@ -55,5 +55,6 @@
       <p>Notas</p>
     </aside>
   </section>
+  <script src="./js/video.js"></script>
 </body>
 </html>
