--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>PlatziVideo</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -103,8 +103,9 @@
                 <li><a href="/">Bolsa de trabajo</a></li>
             </ul>
         </footer>
-        <script src="./data.js"></script>
         <script src="./app.js"></script>
+        <script src="./data.js"></script>
+
     </body>
 </html>
 
