--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <section class="login">
         <section class="login__container">
             <h2 tabindex="0">Inicia sesión</h2>
-            <form class="login__container--form" action="./index.html">
+            <form class="login__container--form" action="/">
                 <input class="input" type="text" placeholder="Correo" aria-label="Correo">
                 <input class="input" type="password" placeholder="Contraseña" aria-label="Contraseña">
                 <button class="button">Iniciar sesión</button>
